--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
         "@types/node": "12.0.10",
         "@types/react": "16.8.22",
         "@types/react-dom": "16.8.4",
+        "from": "^0.1.7",
+        "import": "^0.0.6",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-scripts": "3.0.1",
+        "styled": "^1.0.0",
+        "styled-components": "^4.3.2",
         "typescript": "3.5.2"
     },
     "scripts": {
@@ -43,6 +47,7 @@
         ]
     },
     "devDependencies": {
+        "@types/styled-components": "^4.1.18",
         "@typescript-eslint/eslint-plugin": "^1.11.0",
         "@typescript-eslint/parser": "^1.11.0",
         "eslint-config-airbnb": "^17.1.0",
