--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "import": "^0.0.6",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
+        "react-router-dom": "^5.0.1",
         "react-scripts": "3.0.1",
         "styled": "^1.0.0",
         "styled-components": "^4.3.2",
@@ -47,6 +48,7 @@
         ]
     },
     "devDependencies": {
+        "@types/react-router-dom": "^4.3.5",
         "@types/styled-components": "^4.1.18",
         "@typescript-eslint/eslint-plugin": "^1.11.0",
         "@typescript-eslint/parser": "^1.11.0",
